@@ -1,3 +1,12 @@
+2008-02-19  Josselin Mouette  <joss@malsain.org>
+
+	reviewed by: Mark McLoughlin.
+
+	* backends/evoldap-backend.c: (get_variable),
+	(get_ldap_connection), (lookup_values_from_ldap): replace 
+        functions that have been deprecated in OpenLDAP 2.4 by 
+        up-to-date ones. Closes bug#516877.
+
 2008-01-28  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Bump version to 2.21.90.
